got something working

--- a/app/views/main/main.html
+++ b/app/views/main/main.html
@@ -1,12 +1,12 @@
 
 
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
+  <h1>Smores</h1>
   <p class="lead">
     <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
+    Because the best thing to do with Graham Crackers is make smores.
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!</a></p>
+  <!--<p><a class="btn btn-lg btn-success" ng-href="#">Splendid!</a></p>-->
 </div>
 
 <div class="row marketing">
